--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta>
+    <title></title>
+    <link>                                                                       
 </head>
 <body>
-    <h1>Hello HTML</h1>
-    <img src="img/photo.jpg" width="200" alt="photo">
+    <header></header>
+    <main></main>
+    <footer></footer>
+    <style></style>
+    <nav></nav>
+    <ul></ul>
+    <ol></ol>
+    <li></li>   
+    <h1></h1>
+    <h2></h2>
+    <h3></h3>
+    <h4></h4>
+    <h5></h5>
+    <h6></h6>
+    <img>
+    <div></div>
+    <section></section>
+    <span></span>
+    <a></a>
+    <p></p>
+    <form></form>
+    <fieldset></fieldset>
+    <legend></legend>
+    <label></label>
+    <select></select>
+    <option></option>
+    <textarea></textarea>
+    <input>
+    <button></button>
+    <table></table>
+    <thead></thead>
+    <tbody></tbody>
+    <tr></tr>
+    <td></td>
+    <th></th>
+    <br>
+	<hr>
 </body>
 </html>
