--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
     <input>
     <button></button>
     <table></table>
+    <caption></caption>
     <thead></thead>
     <tbody></tbody>
     <tr></tr>
     <td></td>
     <th></th>
     <br>
-	<hr>
+    <hr>
 </body>
 </html>
